# livephoto

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
crates/livephoto-cli/: Cargo.toml
crates/livephoto-cli/src/: main.rs
crates/livephoto-format/: Cargo.toml
crates/livephoto-format/src/: chunk.rs  error.rs  lib.rs  manifest.rs  media.rs  reader.rs  types.rs  writer.rs
crates/livephoto-media/: Cargo.toml  README.md  README.zh-CN.md
crates/livephoto-media/src/: lib.rs
crates/livephoto-toolkit/: Cargo.toml
crates/livephoto-toolkit/src/: lib.rs
docs/: livephoto-format-v1.md  livephoto-format-v1.zh-CN.md  project-introduction.md  project-introduction.zh-CN.md
web/: README.md  index.html  player.js  styles.css
