[workspace]
members = [
    "crates/livephoto-format",
    "crates/livephoto-toolkit",
    "crates/livephoto-media",
    "crates/livephoto-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Codex"]
repository = ""

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.40", features = ["derive"] }
crc32c = "0.6.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
